<resources>
    <string name="app_name">AI Hunters</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="activity_name_classification">TFL Classify</string>
    <string name="activity_name_detection">TFL Detect</string>
    <string name="activity_name_speech">TFL Speech</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>

    <string name="device">Device:</string>
    <string name="studentWelcome">Welcome to play the game \'Treasure Hunt\"!</string>
    <string name="game_finding">Finding...</string>
    <string name="completed_items">Completed Items</string>
    <string name="completeStatus">0 / 10</string>
    <string name="game_completed">Completed</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="tvWelcome1">Welcome to play the game \'Treasure Hunt\"!</string>
    <string name="tvWelcome2">There are 10 items you need to find.</string>
    <string name="tvWelcome3">Please try your best and use the shortest time to find them.</string>
    <string name="tvEnterNum">Please enter your room number</string>
    <string name="tvEnterRoom">Please create a room</string>
    <string name="tvWon">Please try your best to find all items</string>
    <string name="tvOffline">Single Play</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>