<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".studentWelcome" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/semi_transparent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/treasure_hunt" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcome1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcome1"
            android:textSize="32sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcome2"
            android:textSize="24sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcome3"
            android:textSize="24sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEnterNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEnterNum"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:paddingBottom="10sp"/>

            <EditText
                android:id="@+id/roomNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Room Number"
                android:background="@drawable/frame"
                android:gravity="center"/>

            <Button
                android:id="@+id/enterRoomBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Enter"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/tvOffline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvOffline"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:paddingTop="10sp" />

            <Button
                android:id="@+id/btnOffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Offine Play"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        </TextView>

    </LinearLayout>
</LinearLayout>